Fixed btn responsiveness on smaller screens

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -55,3 +55,13 @@ p {
 .Weather .col {
   justify-content: space-around;
 }
+
+@media (max-width: 600px) {
+  .Weather .col-3 {
+    padding: 0 0 0 5px;
+  }
+
+  .Weather .col-9 {
+    padding: 0 5px 0 0;
+  }
+}
